Made the work balancer pluggable